# Conductor

./: .dockerignore  .gitignore  ACCESS_CONTROL_OPTIONS.md  ACCESS_CONTROL_PLAN.md  ACCESS_POLICIES.md  ADAPTIVE_LOAD_BALANCING_PLAN.md  ANALYTICS.md  ANALYTICS_PLAN.md  CHANGELOG.md  CLAUDE.md  Conductor.postman_collection.json  LOAD_BALANCING_POLICIES.md  MANAGING_RESERVATIONS.md  POST_BODY_PROXY.md  README.md  REQUEST_HISTORY.md  REST_API.md  RIGMONITOR_INTEGRATION_PLAN.md  STICKY_SESSION.md  TESTING.md  VLLM_GEMINI.md  build-dashboard.bat  build-dashboard.sh  build-server.bat  build-server.sh  conductor.json
TestResults/35a63962-3a4b-4a3f-be71-a63043c245a1/: coverage.cobertura.xml
TestResults/463cb290-3771-433e-bed8-1248d9a64fcb/: coverage.cobertura.xml
archive/: ADAPTIVE_LOAD_BALANCING_PLAN.md  LOAD_MODELS.md  REQUEST_ANALYTICS.md  RESERVATIONS.md  RESERVATIONS_PLAN.md  RIGMONITOR_INTEGRATION_PLAN.md
dashboard/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
dashboard/public/: config.js
dashboard/src/: App.jsx  index.css
docker/: compose.yaml  conductor.json  update.bat
docker/factory/: conductor.json  reset.bat  reset.sh  schema.sql
docker/postgres/: init.sql
docs/adr/: 0001-model-access-policy-semantics.md  0002-analytics-workspace.md  (+2 more)
scripts/: seed-analytics-fixtures.sql
sdk/python/: README.md  pyproject.toml
sdk/python/src/conductor_client/: __init__.py  client.py
sdk/python/tests/: test_client.py
src/: Conductor.sln
www/: index.html  script.js  styles.css
(+464 files in other folders)
