[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-sdk-python"
version = "0.1.0"
description = "Python client for Conductor management-plane features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
